# multilingual-asr

./: .gitignore  CLAUDE.md  pyproject.toml
scripts/: extract_text_from_srt.py  parakeet_file_transcribe.py
scripts/live_transcriptor/: better_whisper_transcribe.py  even_better_whisper_transcribe.py
